--- a/projects/collect/src/assets/i18n/ka-IN.json
+++ b/projects/collect/src/assets/i18n/ka-IN.json
@@ -140,6 +140,8 @@
   "forms.label.using_mask": "ನೀವು ಮಾಸ್ಕ್ ಧರಿಸಿದ್ದೀರಾ?",
   "forms.option.bd": "ಉಸಿರಾಟದ ತೊಂದರೆಗಳು ",
   "forms.option.st": "ಗಂಟಲು ಕೆರತ",
+  "forms.option.ftg": "ಆಯಾಸ",
+  "forms.option.mp": "ಸ್ನಾಯು ನೋವು",
   "forms.options.both_doses": "2 ಪ್ರಮಾಣಗಳು",
   "forms.options.one_dose": "1 ಡೋಸ್",
   "forms.options.no_doses": "ಮಾಡಿಲ್ಲ",
