--- a/projects/collect/src/assets/i18n/ma-IN.json
+++ b/projects/collect/src/assets/i18n/ma-IN.json
@@ -139,6 +139,8 @@
     "note.button.dismiss": "काढून टाकणे",
     "forms.label.using_mask": "आपण आता मुखवटा घातला आहे?",
     "forms.option.bd": "श्वास घेण्यास अडचणी",
+    "forms.option.mp":"स्नायू वेदना",
+    "forms.option.ftg":"थकवा",
     "forms.option.st": "घसा खवखवणे",
     "forms.options.both_doses": "2 डोस",
     "forms.options.one_dose": "1 डोस",
