--- a/src/assets/i18n/bn-IN.json
+++ b/src/assets/i18n/bn-IN.json
@@ -36,6 +36,7 @@
     "name.pkg": "ডাঃ প্রশান্ত কুমার ঘোষ",
     "name.anand": "আনন্দ মোহন",
     "name.ananya": "অনন্যা মুগুলি",
+    "name.chandrakiran": "ডাঃ চন্দ্রকিরণ সি",
     "name.lancelot": "ডাঃ ল্যানস্লট মার্ক পিন্টো",
     "name.neeraj": "ডাঃ নীরজ শর্মা",
     "name.prashant": "প্রশান্ত কৃষ্ণান",
@@ -48,6 +49,7 @@
     "place.cmu": "CMU মার্কিন যুক্তরাষ্ট্র",
     "place.cogknit": "Cogknit শব্দার্থিক",
     "place.upgrad": "upGrad",
+    "place.msrmc": "এমএস রামাইয়া কলেজ",
     "team.title.asst_prof": "সহকারী অধ্যাপক",
     "team.title.assoc_prof": "সহযোগী অধ্যাপক",
     "team.title.ceo": "সিইও",
@@ -59,10 +61,12 @@
     "team.title.resp": "Respirologist",
     "team.title.sde": "সফটওয়্যার ইঞ্জিনিয়ার",
     "team.title.phd": "পিএইচডি স্কলার",
+    "team.title.ent": "প্রধান, ইএনটি বিভাগ",
     "team.areas.sriram": "ভাষ্য সনাক্তকরণটিতে, ডিপ লার্নিং, স্নায়ুবিজ্ঞান",
     "team.areas.pkg": "স্পিচ উত্পাদনের, স্পষ্ট উচ্চারণ, স্পিচ ডিসঅর্ডারস",
     "team.areas.anand": "কন্ঠ সনান্তকরণ",
     "team.areas.ananya": "সংকেত প্রক্রিয়াজাতকরণ",
+    "team.areas.chandrakiran":"",
     "team.areas.neeraj": "শ্রাবণ স্নায়ুবিজ্ঞান, সিগন্যাল প্রসেসিং",
     "team.areas.lancelot":"",
 	"team.areas.nirmala": "",
