--- a/src/assets/i18n/en-US.json
+++ b/src/assets/i18n/en-US.json
@@ -37,6 +37,7 @@
 	"name.pkg": "Dr. Prasanta Kumar Ghosh",
 	"name.anand": "Anand Mohan",
 	"name.ananya": "Ananya Muguli",
+	"name.chandrakiran": "Dr. Chandrakiran C",
 	"name.lancelot": "Dr. Lancelot Mark Pinto",
 	"name.neeraj": "Dr. Neeraj Sharma",
 	"name.prashant": "Prashant Krishnan",
@@ -49,6 +50,7 @@
 	"place.cmu": "CMU, USA",
 	"place.cogknit": "Cogknit Semantics",
 	"place.upgrad": "upGrad",
+	"place.msrmc": "MS Ramaiah Medical College",
 	"team.title.asst_prof": "Assistant Professor",
 	"team.title.assoc_prof": "Associate Professor",
 	"team.title.ceo": "CEO",
@@ -60,6 +62,7 @@
 	"team.title.resp": "Respirologist",
 	"team.title.sde": "Software Engineer",
 	"team.title.phd": "PhD Scholar",
+	"team.title.ent": "Head, Dept. of ENT",
 	"team.areas.sriram": "Speech Recognition, Deep Learning, Neuroscience",
 	"team.areas.pkg": "Speech Production, Articulation, Speech Disorders",
 	"team.areas.anand": "Speech Recognition",
@@ -67,6 +70,7 @@
 	"team.areas.neeraj": "Auditory Neuroscience, Signal Processing",
 	"team.areas.prashant": "Speaker Recognition",
 	"team.areas.lancelot":"",
+	"team.areas.chandrakiran":"",
 	"team.areas.nirmala": "",
 	"team.areas.rohit": "Speech Recognition",
 	"team.areas.shreyas": "Speaker Recognition, Machine Learning",
