--- a/src/assets/i18n/es-US.json
+++ b/src/assets/i18n/es-US.json
@@ -35,6 +35,7 @@
 	"name.pkg": "Dr. Prasanta Kumar Ghosh",
 	"name.anand": "Anand Mohan",
 	"name.ananya": "Ananya Muguli",
+	"name.chandrakiran": "Dr. Chandrakiran C",
 	"name.lancelot": "Dr. Lancelot Mark Pinto",
 	"name.neeraj": "Dr. Neeraj Sharma",
 	"name.prashant": "Prashant Krishnan",
@@ -47,6 +48,7 @@
 	"place.cmu": "CMU, EE. UU.",
 	"place.cogknit": "Semántica Cogknit",
 	"place.upgrad": "upGrad",
+	"place.msrmc": "Facultad de Medicina MS Ramaiah",
 	"team.title.asst_prof": "Profesor asistente",
 	"team.title.assoc_prof": "profesor adjunto",
 	"team.title.ceo": "CEO",
@@ -58,10 +60,12 @@
 	"team.title.resp": "Respirólogo",
 	"team.title.sde": "Ingeniero de software",
 	"team.title.phd": "Becario de doctorado",
+	"team.title.ent": "Jefe, Departamento de ENT",
 	"team.areas.sriram": "Reconocimiento de voz, aprendizaje profundo, neurociencia",
 	"team.areas.pkg": "Producción del habla, articulación, trastornos del habla",
 	"team.areas.anand": "Reconocimiento de voz",
 	"team.areas.ananya": "Procesamiento de la señal",
+	"team.areas.chandrakiran":"",
 	"team.areas.neeraj": "Neurociencia auditiva, procesamiento de señales",
 	"team.areas.prashant": "Reconocimiento de locutor",
 	"team.areas.rohit": "Reconocimiento de voz",
