--- a/src/assets/i18n/ka-IN.json
+++ b/src/assets/i18n/ka-IN.json
@@ -36,6 +36,7 @@
     "name.pkg": "ಡಾ Prasanta ಕುಮಾರ್ ಘೋಷ್",
     "name.anand": "ಆನಂದ್ ಮೋಹನ್",
     "name.ananya": "ಅನನ್ಯಾ ಮುಗುಲಿ",
+    "name.chandrakiran": "ಡಾ.ಚಂದ್ರಕಿರಣ್ ಸಿ",
     "name.lancelot": "ಡಾ ಲ್ಯಾನ್ಸೆಲಾಟ್ ಮಾರ್ಕ್ ಪಿಂಟೊ",
     "name.neeraj": "ಡಾ ನೀರಜ್ ಶರ್ಮಾ",
     "name.prashant": "ಪ್ರಶಾಂತ್ ಕೃಷ್ಣನ್",
@@ -48,6 +49,7 @@
     "place.cmu": "ಸಿಎಮ್ಯು, ಅಮೇರಿಕಾ",
     "place.cogknit": "Cogknit ಶಬ್ದಾರ್ಥಗಳು",
     "place.upgrad": "upGrad",
+    "place.msrmc": "ಎಂ.ಎಸ್.ರಾಮಯ್ಯ ವೈದ್ಯಕೀಯ ಕಾಲೇಜು",
     "team.title.asst_prof": "ಸಹಾಯಕ ಪ್ರಾಧ್ಯಾಪಕ",
     "team.title.assoc_prof": "ಸಹ ಪ್ರಾಧ್ಯಾಪಕರು",
     "team.title.ceo": "ಸಿಇಒ",
@@ -59,12 +61,14 @@
     "team.title.resp": "Respirologist",
     "team.title.sde": "ಸಾಫ್ಟ್ವೇರ್ ಇಂಜಿನಿಯರ್",
     "team.title.phd": "ಪಿಎಚ್ಡಿ ಸ್ಕಾಲರ್",
+    "team.title.ent": "ಮುಖ್ಯಸ್ಥ, ಇಎನ್‌ಟಿ ಇಲಾಖೆ",
     "team.areas.sriram": "ಸ್ಪೀಚ್ ರೆಕಗ್ನಿಷನ್, ಡೀಪ್ ಕಲಿಕೆ, ನ್ಯೂರೋಸೈನ್ಸ್",
     "team.areas.pkg": "ಸ್ಪೀಚ್ ಪ್ರೊಡಕ್ಷನ್, ಆರ್ಟಿಕ್ಯುಲೇಶನ್, ಸ್ಪೀಚ್ ಡಿಸಾರ್ಡರ್ಸ್",
     "team.areas.anand": "ಸ್ಪೀಚ್ ರೆಕಗ್ನಿಷನ್",
     "team.areas.ananya": "ಸಿಗ್ನಲ್ ಪ್ರೊಸೆಸಿಂಗ್",
     "team.areas.neeraj": "ಆಡಿಟರಿ ನ್ಯೂರೋಸೈನ್ಸ್, ಸಿಗ್ನಲ್ ಪ್ರೊಸೆಸಿಂಗ್",
     "team.areas.lancelot":"",
+    "team.areas.chandrakiran":"",
 	"team.areas.nirmala": "",
     "team.areas.prashant": "ಸ್ಪೀಕರ್ ಗುರುತಿಸುವಿಕೆ",
     "team.areas.rohit": "ಸ್ಪೀಚ್ ರೆಕಗ್ನಿಷನ್",
