--- a/src/assets/i18n/ma-IN.json
+++ b/src/assets/i18n/ma-IN.json
@@ -36,6 +36,7 @@
     "name.pkg": "डॉ प्रशांतचंद्र कुमार घोष",
     "name.anand": "आनंद मोहन",
     "name.ananya": "अनन्या मुगुली",
+    "name.chandrakiran": "डॉ.चंद्रकिरण सी",
     "name.lancelot": "डॉ लान्सलॉट मार्क पिंटो",
     "name.neeraj": "डॉ नीरज शर्मा",
     "name.prashant": "प्रशांत कृष्णन",
@@ -48,6 +49,7 @@
     "place.cmu": "CMU, यूएसए",
     "place.cogknit": "Cogknit Semantics",
     "place.upgrad": "upGrad",
+    "place.msrmc": "एमएस रमैया मेडिकल कॉलेज",
     "team.title.asst_prof": "सहायक प्राध्यापक",
     "team.title.assoc_prof": "सहकारी प्रोफेसर",
     "team.title.ceo": "मुख्य कार्यकारी अधिकारी",
@@ -59,12 +61,14 @@
     "team.title.resp": "Respirologist",
     "team.title.sde": "सोफ्टवेअर अभियंता",
     "team.title.phd": "पीएचडी स्कॉलर",
+    "team.title.ent": "प्रमुख, ईएनटी विभाग",
     "team.areas.sriram": "उच्चार ओळख, दीप शिक्षण, मेंदूचा अभ्यास",
     "team.areas.pkg": "भाषण उत्पादन, उच्चारण, भाषण विकार",
     "team.areas.anand": "उच्चार ओळख",
     "team.areas.ananya": "सिग्नल प्रोसेसिंग",
     "team.areas.neeraj": "ऑडिटरी मेंदूचा अभ्यास, सिग्नल प्रोसेसिंग",
     "team.areas.lancelot":"",
+    "team.areas.chandrakiran":"",
 	"team.areas.nirmala": "",
     "team.areas.prashant": "स्पीकर ओळख",
     "team.areas.rohit": "उच्चार ओळख",
