--- a/src/assets/i18n/ml-IN.json
+++ b/src/assets/i18n/ml-IN.json
@@ -35,6 +35,7 @@
     "name.pkg": "ഡോ പ്രശാന്ത കുമാർ ഘോഷ്",
     "name.anand": "ആനന്ദ് മോഹൻ",
     "name.ananya": "അനന്യ മുഗുലി",
+    "name.chandrakiran": "ഡോ. ചന്ദ്രകിരൻ സി",
     "name.lancelot": "ഡോ ലാൻ‌സെലോട്ട് മാർക്ക് പിന്റോ",
     "name.neeraj": "ഡോ നീരജ് ശർമ",
     "name.prashant": "പ്രശാന്ത് കൃഷ്ണൻ",
@@ -47,6 +48,7 @@
     "place.cmu": "കഥയിലൂടെ, യുഎസ്എ",
     "place.cogknit": "ചൊഗ്ക്നിത് സെമാന്റിക്കുകൾ",
     "place.upgrad": "ഉപ്ഗ്രദ്",
+    "place.msrmc": "എം എസ് രാമയ്യ മെഡിക്കൽ കോളേജ്",
     "team.title.asst_prof": "അസിസ്റ്റന്റ് പ്രൊഫസർ",
     "team.title.assoc_prof": "അസോസിയേറ്റ് പ്രഫസർ",
     "team.title.ceo": "സിഇഒ",
@@ -58,12 +60,14 @@
     "team.title.resp": "Respirologist",
     "team.title.sde": "സോഫ്റ്റ്വെയർ എൻജിനീയർ",
     "team.title.phd": "പിഎച്ച്ഡി സ്കോളർ",
+    "team.title.ent": "ഹെഡ്, ഇഎൻ‌ടി വകുപ്പ്",
     "team.areas.sriram": "സംഭാഷണം തിരിച്ചറിയൽ, ഡീപ് പഠന, ന്യൂറോസയൻസ്",
     "team.areas.pkg": "സ്പീച്ച് പ്രൊഡക്ഷൻ, അവയില്, സ്പീച്ച് തകരാറുകൾ",
     "team.areas.anand": "സംഭാഷണം തിരിച്ചറിയൽ",
     "team.areas.ananya": "സിഗ്നൽ പ്രോസസിംഗ്",
     "team.areas.neeraj": "ഓഡിറ്ററി ന്യൂറോസയൻസ്, സിഗ്നൽ പ്രോസസിംഗ്",
     "team.areas.lancelot":"",
+    "team.areas.chandrakiran":"",
 	"team.areas.nirmala": "",
     "team.areas.prashant": "സ്പീക്കർ തിരിച്ചറിയൽ",
     "team.areas.rohit" : "സംഭാഷണം തിരിച്ചറിയൽ",
