--- a/src/assets/i18n/ta-IN.json
+++ b/src/assets/i18n/ta-IN.json
@@ -36,6 +36,7 @@
     "name.pkg": "டாக்டர் பிரசாந்தா குமார் கோஷ்",
     "name.anand": "ஆனந்த் மோகன்",
     "name.ananya": "அனன்யா முகுலி",
+    "name.chandrakiran": "டாக்டர் சந்திரகிரன் சி",
     "name.lancelot": "லான்சலோட் மார்க் பிண்டோ",
     "name.neeraj": "டாக்டர் நீரஜ் சர்மா",
     "name.prashant": "பிரசாந்த் கிருஷ்ணன்",
@@ -48,6 +49,7 @@
     "place.cmu": "சீ.எம்.யூ, அமெரிக்கா",
     "place.cogknit": "Cogknit செமாண்டிக்ஸ்",
     "place.upgrad": "upGrad",
+    "place.msrmc": "எம்.எஸ்.ராமையா மருத்துவக் கல்லூரி",
     "team.title.asst_prof": "உதவி பேராசிரியர்",
     "team.title.assoc_prof": "இணை பேராசிரியர்",
     "team.title.ceo": "தலைமை நிர்வாக அதிகாரி",
@@ -59,12 +61,14 @@
     "team.title.resp": "Respirologist",
     "team.title.sde": "மென்பொருள் பொறியாளர்",
     "team.title.phd": "பிஎச்டி ஸ்காலர்",
+    "team.title.ent": "தலைவர், ENT துறை",
     "team.areas.sriram": "பேச்சு அறிதல், டீப் கற்றல், நரம்பியல்",
     "team.areas.pkg": "பேச்சு உற்பத்தி, ஒலிப்பு, பேச்சு சீர்குலைவுகள்",
     "team.areas.anand": "பேச்சு அறிதல்",
     "team.areas.ananya": "சிக்னல் ப்ராசசிங்",
     "team.areas.neeraj": "ஆடிட்டரி நரம்பியல், சிக்னல் ப்ராசசிங்",
     "team.areas.lancelot":"",
+    "team.areas.chandrakiran":"",
 	"team.areas.nirmala": "",
     "team.areas.prashant": "சபாநாயகர் அங்கீகாரம்",
     "team.areas.rohit": "பேச்சு அறிதல்",
