--- a/src/assets/i18n/te-IN.json
+++ b/src/assets/i18n/te-IN.json
@@ -36,6 +36,7 @@
     "name.pkg": "డాక్టర్ ప్రశాంత కుమార్ ఘోష్",
     "name.anand": "ఆనంద్ మోహన్",
     "name.ananya": "అనన్య ముగులి",
+    "name.chandrakiran": "డాక్టర్ చంద్రకిరణ్ సి",
     "name.lancelot": "లాన్సెలాట్ మార్క్ పింటో",
     "name.neeraj": "డాక్టర్ నీరజ్ శర్మ",
     "name.prashant": "ప్రశాంత్ కృష్ణన్",
@@ -48,6 +49,7 @@
     "place.cmu": "సి.ఎం.యూ., యూ.ఎస్.ఏ",
     "place.cogknit": "Cogknit సెమాంటిక్స్",
     "place.upgrad": "upGrad",
+    "place.msrmc": "ఎం.ఎస్.రామయ్య మెడికల్ కాలేజీ",
     "team.title.asst_prof": "సహాయ ఆచార్యులు",
     "team.title.assoc_prof": "సహ ప్రాచార్యులు",
     "team.title.ceo": "సి.ఈ.ఒ",
@@ -59,12 +61,14 @@
     "team.title.resp": "Respirologist",
     "team.title.sde": "సాఫ్ట్వేర్ ఇంజనీర్",
     "team.title.phd": "పీ.హెచ్.డి. స్కాలర్",
+    "team.title.ent": "హెడ్, ENT విభాగం",
     "team.areas.sriram": "స్పీచ్ రికగ్నిషన్, డీప్ లెర్నింగ్, న్యూరోసైన్స్",
     "team.areas.pkg": "స్పీచ్ ప్రొడక్షన్, ఆర్టిక్యూలేషన్, స్పీచ్ డిజార్డర్స్",
     "team.areas.anand": "స్పీచ్ రికగ్నిషన్",
     "team.areas.ananya": "సిగ్నల్ ప్రాసెసింగ్",
     "team.areas.neeraj": "ఆడిటరీ న్యూరోసైన్స్, సిగ్నల్ ప్రాసెసింగ్",
     "team.areas.lancelot":"",
+    "team.areas.chandrakiran":"",
 	"team.areas.nirmala": "",
     "team.areas.prashant": "స్పీకర్ రికగ్నిషన్",
     "team.areas.rohit": "స్పీచ్ రికగ్నిషన్",
