--- a/projects/collect/src/assets/i18n/bn-IN.json
+++ b/projects/collect/src/assets/i18n/bn-IN.json
@@ -144,6 +144,8 @@
     "forms.label.using_mask": "আপনি কি এখন একটি মাস্ক পরেন?",
     "forms.option.bd": "শ্বাস প্রশ্বাস",
     "forms.option.st": "গলা ব্যথা",
+    "forms.option.ftg": "ক্লান্তি",
+    "forms.option.mp": "পেশী ব্যথা",
     "forms.options.both_doses": "2 ডোজ",
     "forms.options.one_dose": "1 ডোজ",
     "forms.options.no_doses": "শেষ না",
@@ -151,7 +153,6 @@
     "forms.option.rat": "ইঁদুর",
     "forms.option.prev_pos": "পূর্বে ইতিবাচক পরীক্ষা করা হলেও এখন নেতিবাচক পরীক্ষা করেছেন tested",
     "forms.option.never_pos": "ইতিবাচক পরীক্ষা করা হয়নি",
-
     "forms.option.others_resp": "অন্যান্য",
     "forms.option.others_preexist": "অন্যান্য"
 }
