--- a/src/assets/i18n/hi-IN.json
+++ b/src/assets/i18n/hi-IN.json
@@ -36,6 +36,7 @@
 	"name.pkg": "डॉ प्रशांत कुमार घोष",
 	"name.anand": "आनंद मोहन",
 	"name.ananya": "अनन्या मुगुली",
+	"name.chandrakiran": "डॉ. चंद्रकिरण सी",
 	"name.lancelot": "डॉ लैंसेलोट मार्क पिंटो",
 	"name.neeraj": "डॉ नीरज शर्मा",
 	"name.prashant": "प्रशांत कृष्णन",
@@ -48,6 +49,7 @@
 	"place.cmu": "CMU, संयुक्त राज्य अमेरिका",
 	"place.cogknit": "Cogknit शब्दार्थ",
 	"place.upgrad": "upgrad",
+	"place.msrmc": "एमएस रमैया मेडिकल कॉलेज",
 	"team.title.asst_prof": "सहेयक प्रोफेसर",
 	"team.title.assoc_prof": "सह - आचार्य",
 	"team.title.ceo": "सी ई ओ",
@@ -59,12 +61,14 @@
 	"team.title.resp": "Respirologist",
 	"team.title.sde": "सॉफ्टवेयर इंजीनियर",
 	"team.title.phd": "पीएचडी स्कॉलर",
+	"team.title.ent": "प्रमुख, ईएनटी विभाग",
 	"team.areas.sriram": "वाक् पहचान, दीप लर्निंग, तंत्रिका विज्ञान",
 	"team.areas.pkg": "भाषण उत्पादन, अभिव्यक्ति, भाषण विकारों",
 	"team.areas.anand": "वाक् पहचान",
 	"team.areas.ananya": "सिग्नल प्रोसेसिंग",
 	"team.areas.neeraj": "श्रवण तंत्रिका विज्ञान, सिग्नल प्रोसेसिंग",
 	"team.areas.lancelot":"",
+	"team.areas.chandrakiran":"",
 	"team.areas.nirmala": "",
 	"team.areas.prashant": "अध्यक्ष मान्यता",
 	"team.areas.rohit": "वाक् पहचान",
