Added column for awaiting test result

--- a/projects/collect/src/assets/i18n/en-US.json
+++ b/projects/collect/src/assets/i18n/en-US.json
@@ -66,10 +66,13 @@
 	"forms.option.pos_test": "Tested positive in my last test",
 	"forms.option.neg_test": "Tested negative in my last test",
 	"forms.option.no_test" : "Never taken a test",
+	"forms.option.under_test" : "Sample under test, report is awaiting",
 	"forms.option.rtpcr": "RT-PCR",
 	"forms.option.rat": "RAT",
 	"forms.option.prev_pos": "Previously tested positive, but have tested negative now",
 	"forms.option.never_pos": "Never tested positive",
+	"forms.option.ut_prev_pos": "Previously tested positive",
+	"forms.option.ut_never_pos": "Previously never tested positive",
 	"forms.option.positive_mild": "Mild symptoms",
 	"forms.option.positive_moderate": "Moderate symptoms",
 	"forms.option.positive_asymp": "No symptoms (asymptomatic)",
