Added test awaiting option and srf_id field

--- a/projects/collect/src/assets/i18n/en-US.json
+++ b/projects/collect/src/assets/i18n/en-US.json
@@ -8,6 +8,7 @@
     "language.telugu":"తెలుగు",
     "language.bengali":"বাংলা",
 	"language.spanish": "Español",
+  	"language.oriya": "ଓଡ଼ିଆ ",
 	"app.title": "coswara",
 	"metadata.title.no_metadata": "We need some information to continue!",
 	"metadata.tabs.disclaimer": "Disclaimer",
@@ -44,8 +45,10 @@
 	"forms.label.resp_ail": "Do you have any of these respiratory ailments?",
 	"forms.label.pre_exist": "Do you have any of these pre-existing conditions?",
 	"forms.label.test_type": "Which test have you taken?",
-	"forms.label.when_test": "When did you take the test?",
+	"forms.label.when_test": "When did you take the test? ",
 	"forms.label.test_date": "Test Date",
+	"forms.label.srf_id": "Enter your SRF-ID ",
+	"forms.label.enter_srf_id": "13 digit SRF-ID",
 	"forms.label.ct_scan": "Have you taken a CT-Scan?",
 	"forms.label.ct_score": "Enter your CT-Score",
 	"forms.label.ct_score_field": "CT-Score",
@@ -63,10 +66,10 @@
 	"forms.options.both_doses": "2 doses",
 	"forms.options.one_dose": "1 dose",
 	"forms.options.no_doses": "Not done",
+	"forms.option.under_test" : "Sample given for testing, waiting for report",
 	"forms.option.pos_test": "Tested positive in my last test",
 	"forms.option.neg_test": "Tested negative in my last test",
 	"forms.option.no_test" : "Never taken a test",
-	"forms.option.under_test" : "Sample under test, report is awaiting",
 	"forms.option.rtpcr": "RT-PCR",
 	"forms.option.rat": "RAT",
 	"forms.option.prev_pos": "Previously tested positive, but have tested negative now",
