Updating Kannada language

--- a/projects/collect/src/assets/i18n/ka-IN.json
+++ b/projects/collect/src/assets/i18n/ka-IN.json
@@ -8,147 +8,153 @@
   "language.telugu": "తెలుగు",
   "language.bengali": "বাংলা",
   "language.spanish": "Español",
+  "language.oriya": "ଓଡ଼ିଆ ",
   "app.title": "coswara",
-  "metadata.title.no_metadata": "ನಾವು ಮುಂದುವರಿಯಲು ಕೆಲವು ಮಾಹಿತಿಗಳ ಅಗತ್ಯವಿದೆ!",
-  "metadata.tabs.disclaimer": "ಹಕ್ಕುನಿರಾಕರಣೆ  ",
-  "metadata.tabs.metadata": "ಮೆಟಾಡೇಟಾ",
-  "metadata.tabs.health_status": "ಆರೋಗ್ಯದ ಸ್ಥಿತಿ",
-  "metadata.disclaimer.para1": "ಈ ಅಧ್ಯಯನವು ಮಾನವನ ಧ್ವನಿಯ ಆಧಾರದ ಮೇಲೆ covid-19 ರೀತಿಯ ಶ್ವಾಸಕೋಶದ ಕಾಯಿಲೆಗಳನ್ನು ಗುರುತಿಸುವ ಸಲುವಾಗಿದೆ. ಈ ಹಿಂದೆ ಇಂತಹ ಅಧ್ಯಯನಗಳಲ್ಲಿ ಉನ್ನತ ಮಟ್ಟದ ಸಂವೇದನೆ ವರದಿಯಾಗಿದೆ. ರೋಗ ಪತ್ತೆ ಮಾಡುವ ಯಾವುದೇ ಸಾಧನಗಳನ್ನು ಅಂಕಿಅಂಶಗಳ ಮಹತ್ವದ ಆಧಾರದ ಮೇಲೆ ಈ ಅಪ್ಲಿಕೇಶನ್ನಲ್ಲಿ ಮುಂದಿನ ದಿನಗಳಲ್ಲಿ ಅಳವಡಿಸಲಾಗುತ್ತದೆ. ಈ ಅಭಿಯಾನದಲ್ಲಿ ಪಾಲ್ಗೊಳ್ಳುವಿಕೆ ಆಸಕ್ತರ ಸ್ವಇಚ್ಛೆಯಾಗಿರುತ್ತದೆ. ಈ ಮುಖಾಂತರ ಸಂಗ್ರಹಿಸಿದ ವಿವರಗಳು ಯಾವುದೇ ವೈಯಕ್ತಿಕ ಮಾಹಿತಿಗಳನ್ನು ಒಳಗೊಂಡಿರುವುದಿಲ್ಲ.",
-  "metadata.disclaimer.para2": "ಇಡೀ ರೆಕಾರ್ಡಿಂಗ್ ಮತ್ತು ದತ್ತಾಂಶ ಸಂಗ್ರಹ ಮಾಡಲು ಕೇವಲ 5 ನಿಮಿಷಗಳು ಬೇಕಾಗುತ್ತದೆ. ದಯವಿಟ್ಟು ಧ್ವನಿಮುದ್ರಣದ ಸಮಯದಲ್ಲಿ ನಿಮ್ಮ ಸಾಧನವನ್ನು (ಸ್ಮಾರ್ಟ್ ಫೋನ್  / ಲ್ಯಾಪ್ಟಾಪ್) ಮುಖದಿಂದ ಸುಮಾರು 20 ಸೆಂಟಿ ಮೀಟರ್ ದೂರ ಇಟ್ಟುಕೊಳ್ಳಿ. ಒಂದು ನಿಶ್ಯಬ್ದ ಪರಿಸರದಲ್ಲಿ ರೆಕಾರ್ಡಿಂಗ್ ನಿರ್ವಹಿಸಿ. ರೆಕಾರ್ಡಿಂಗ್ ಸಾಧನವನ್ನು ಬೇರೆಯವರೊಂದಿಗೆ ಹಂಚಿಕೊಳ್ಳುವುದನ್ನು ನಿರಾಕರಿಸುವುದು ಉತ್ತಮ ಅಥವಾ ಶುದ್ಧೀಕರಣ / ನೈರ್ಮಲ್ಯ ಕಾಪಾಡಿಕೊಂಡು ಹಂಚಿಕೊಳ್ಳುವುದು ಉತ್ತಮ.",
-  "metadata.disclaimer.para3": "ಭಾರತೀಯ ವಿಜ್ಞಾನ ಸಂಸ್ಥೆಯ ನೈತಿಕ ಸಮಿತಿಯು ಅಕ್ರಮಣಕಾರಿಯಲ್ಲದ ಧ್ವನಿಮುದ್ರಣಗಳ ವಿಧಾನವನ್ನು ಅಂಗೀಕರಿಸಿದ್ದಾರೆ.",
-  "metadata.disclaimer.para4": "\"ಆರಂಭಿಸು\" ಕ್ಲಿಕ್ ಮಾಡುವ ಮೂಲಕ ನಮ್ಮ <a href='https://coswara.iisc.ac.in/terms' target='_blank'> ನಿಯಮಗಳು ಮತ್ತು ಷರತ್ತುಗಳನ್ನು </a> ಒಪ್ಪಿಕೊಂಡಿದ್ದೀರಿ ಮತ್ತು ನಿಮ್ಮ ಡೇಟಾವನ್ನು ಕೇವಲ ಆವಿಷ್ಕಾರ ಮತ್ತು ಪ್ರಗತಿಗಾಗಿ ನೀಡಲು ಸಮ್ಮತಿಸಿದ್ದೀರಿ,",
-  "metadata.disclaimer.para4.alternate": "ನೀವು ನಮ್ಮ <a href='https://coswara.iisc.ac.in/terms' target='_blank'> ನಿಯಮಗಳು ಮತ್ತು ಷರತ್ತುಗಳನ್ನು </a> ಒಪ್ಪಿಕೊಂಡಿದ್ದೀರಿ.",
-  "metadata.disclaimer.para5": "ಯಾವುದೇ ಪ್ರಶ್ನೆಗಳಿಗೆ, ದಯವಿಟ್ಟು <a href='mailto:sriramg@iisc.ac.in'> sriramg@iisc.ac.in </a> ಗೆ ಸಂಪರ್ಕಿಸಿ.",
-  "metadata.buttons.start": "ಆರಂಭಿಸಿ",
-  "metadata.buttons.start_over": "ಮತ್ತೆ ಆರಂಭಿಸಿ",
-  "metadata.buttons.continue": "ಮುಂದುವರಿಸಿ",
-  "metadata.buttons.previous": "ಹಿಂದೆ",
-  "metadata.buttons.next": "ಮುಂದೆ",
-  "metadata.buttons.submit": "ಸಮರ್ಪಿಸಿ",
-  "forms.label.age": "ವಯಸ್ಸು",
-  "forms.label.gender": "ಲಿಂಗ",
-  "forms.label.english_proficient": "ನೀವು ಇಂಗ್ಲೀಷ್ ಪ್ರವೀಣತೆ ಹೊಂದಿರುವಿರೇ?",
-  "forms.label.returning_user": "ನೀವು ಈ ಹಿಂದೆ ಯಾವಾಗಾದರೂ ರೆಕಾರ್ಡಿಂಗ್ ಮಾಡಿದ್ದೀರಾ?",
-  "forms.label.location": "ಸ್ಥಳ",
-  "forms.label.country": "ದೇಶ",
-  "forms.label.state": "ರಾಜ್ಯ",
-  "forms.label.locality": "ಜಿಲ್ಲೆ",
-  "forms.label.current_status": "ಪ್ರಸ್ತುತ ಸ್ಥಿತಿ",
-  "forms.label.taken_test": "ನೀವು COVID -19 ಪರೀಕ್ಷೆ ತೆಗೆದುಕೊಂಡ?",
-  "forms.label.health_conditions": "ಆರೋಗ್ಯದ ಸ್ಥಿತಿ",
-  "forms.label.smoking_habits": "ನಿಮಗೆ ಧೂಮಪಾನದ ಅಭ್ಯಾಸವಿದೆಯೇ?",
- "forms.label.vacc_status": "ವ್ಯಾಕ್ಸಿನೇಷನ್ ಸ್ಥಿತಿ?",
- "forms.label.symptoms": "ನೀವು ಈ ಯಾವುದೇ ರೋಗಲಕ್ಷಣಗಳನ್ನು ಹೊಂದಿದ್ದೀರಾ?",
- "forms.label.conditions": "ನೀವು ಈ ಯಾವುದೇ ಷರತ್ತುಗಳನ್ನು ಹೊಂದಿದ್ದೀರಾ?",
- "forms.label.resp_ail": "ಈ ಉಸಿರಾಟದ ಕಾಯಿಲೆಗಳಲ್ಲಿ ಯಾವುದಾದರೂ ಇದೆಯೇ?",
- "forms.label.pre_exist": "ಈ ಪೂರ್ವ-ಅಸ್ತಿತ್ವದಲ್ಲಿರುವ ಯಾವುದೇ ಷರತ್ತುಗಳನ್ನು ನೀವು ಹೊಂದಿದ್ದೀರಾ?",
- "forms.label.test_type": "ನೀವು ಯಾವ ಪರೀಕ್ಷೆಯನ್ನು ತೆಗೆದುಕೊಂಡಿದ್ದೀರಿ?",
- "forms.label.when_test": "ನೀವು ಯಾವಾಗ ಪರೀಕ್ಷೆ ತೆಗೆದುಕೊಂಡಿದ್ದೀರಿ?",
- "forms.label.test_date": "ಪರೀಕ್ಷಾ ದಿನಾಂಕ",
- "forms.label.ct_scan": "ನೀವು ಸಿಟಿ-ಸ್ಕ್ಯಾನ್ ತೆಗೆದುಕೊಂಡಿದ್ದೀರಾ?",
- "forms.label.ct_score": "ನಿಮ್ಮ CT- ಸ್ಕೋರ್ ಅನ್ನು ನಮೂದಿಸಿ",
- "forms.label.ct_score_field": "ಸಿಟಿ-ಸ್ಕೋರ್",
- "forms.label.ct_scan_date": "ನೀವು ಯಾವಾಗ ಸಿಟಿ-ಸ್ಕ್ಯಾನ್ ತೆಗೆದುಕೊಂಡಿದ್ದೀರಿ?",
- "forms.label.prior_status": "ಹೆಚ್ಚುವರಿ ಮಾಹಿತಿ.",
- "forms.errors.ct_score.valid": "ಮಾನ್ಯ ಸಿಟಿ ಸ್ಕೋರ್ ಅಲ್ಲ",
-  "forms.errors.required": "ಅವಶ್ಯ",
-  "forms.errors.age.valid": "ವಯಸ್ಸು ತಪ್ಪಾಗಿರುವಂತಿದೆ",
-  "forms.errors.field_required": "(*) ಗುರುತು ಹೊಂದಿರುವ ಅಂಶಗಳು ಕಡ್ಡಾಯವಾಗಿರುತ್ತದೆ",
-  "forms.options.male": "ಪುರುಷ",
-  "forms.options.female": "ಸ್ತ್ರೀ",
-  "forms.options.other": "ಇತರೆ",
-  "forms.options.yes": "ಹೌದು",
-  "forms.options.no": "ಇಲ್ಲ",
-  "forms.option.pos_test": "ನನ್ನ ಕೊನೆಯ ಪರೀಕ್ಷೆಯಲ್ಲಿ ಪರೀಕ್ಷಿಸಲ್ಪಟ್ಟಿದೆ ಸಕಾರಾತ್ಮಕ",
-  "forms.option.neg_test": "ನನ್ನ ಕೊನೆಯ ಪರೀಕ್ಷೆಯಲ್ಲಿ ಪರೀಕ್ಷಿಸಲ್ಪಟ್ಟಿದೆ ಋಣಾತ್ಮಕ",
-  "forms.option.no_test": "ಪರೀಕ್ಷಾ ತೆಗೆದುಕೊಳ್ಳುವಂತೆ",
-  "forms.option.positive_mild": "ಸೌಮ್ಯ ರೋಗಲಕ್ಷಣಗಳನ್ನು",
-  "forms.option.positive_moderate": "ಮಧ್ಯಮ ಲಕ್ಷಣಗಳು",
-  "forms.option.recovered_full": "ಚೇತರಿಸಿಕೊಂಡ",
-  "forms.option.no_resp_illness_exposed": "ಸಂಪರ್ಕದ ಮೂಲಕ ವೈರಸ್ ಗೆ ಒಡ್ಡಿಕೊಂಡಿರಬಹುದು",
-  "forms.option.not_exposed": "ಸಂಪರ್ಕದ ಮೂಲಕ ವೈರಸ್ ಗೆ ಒಡ್ಡಿಕೊಳ್ಳುವುದಿಲ್ಲ",
-  "forms.option.loss_of_smell": "ವಾಸನೆ ಅಥವಾ ರುಚಿಯ ನಷ್ಟ",
-  "forms.option.positive_asymp": "ಯಾವುದೇ ಲಕ್ಷಣಗಳು (ಲಕ್ಷಣಗಳಿಲ್ಲದ)",
-  "forms.option.recovered_neg_test": "ಹ್ಯಾಡ್ ಹಿಂದೆ ಧನಾತ್ಮಕ ಪರೀಕ್ಷಿಸಲಾಯಿತು, ಆದರೆ ಈಗ ಋಣಾತ್ಮಕ ಪರೀಕ್ಷಿಸಿದ್ದಾರೆ ಮತ್ತು ಸಂಪೂರ್ಣವಾಗಿ ಚೇತರಿಸಿಕೊಂಡ",
-  "forms.option.resp_illness_not_identified": "ಇತರ ಪೂರ್ವ ಅಸ್ತಿತ್ವದಲ್ಲಿರುವ ಉಸಿರಾಟದ ಕಾಯಿಲೆಗಳ ಹ್ಯಾವ್",
-  "forms.option.healthy": "ಯಾವುದೇ ಉಸಿರಾಟದ ಕಾಯಿಲೆಗಳ ಹೊಂದಿಲ್ಲವೇ",
-  "forms.option.none_of_the_above": "ಮೇಲಿನ ಯಾವುದೂ ಅಲ್ಲ",
-  "forms.option.cold": "ಶೀತ",
-  "forms.option.cough": "ಕೆಮ್ಮು",
-  "forms.option.fever": "ಜ್ವರ",
-  "forms.option.pneumonia": "ನ್ಯುಮೋನಿಯಾ",
-  "forms.option.smoker": "ಧೂಮಪಾನಿ",
-  "forms.option.asthma": "ಉಬ್ಬಸ (ಆಸ್ತ್ಮ) ",
-  "forms.option.cld": "ದೀರ್ಘಕಾಲದ ಶ್ವಾಸಕೋಶದ ಕಾಯಿಲೆ",
-  "forms.option.ht": "ಅಧಿಕ ರಕ್ತದೊತ್ತಡ (ಬಿ.ಪಿ)",
-  "forms.option.ihd": "ರಕ್ತಕೊರತೆಯ ಹೃದಯ ರೋಗ",
-  "forms.option.diabetes": "ಮಧುಮೇಹ",
-  "forms.option.diarrhoea": "ಅತಿಸಾರ",
-  "record.message.info": "ದಯವಿಟ್ಟು ನಿಶ್ಶಬ್ದ ಪರಿಸರದಲ್ಲಿ ಇದ್ದೀರೆಂದು ಖಚಿತಪಡಿಸಿಕೊಳ್ಳಿ ಮತ್ತು ನಿಮ್ಮ ಸಾಧನವನ್ನು  ನಿಮ್ಮ ಮುಖದ 20 ಸೆಂಟಿಮೀಟರ್ ದೂರದಲ್ಲಿ ಇಟ್ಟುಕೊಳ್ಳಿ.",
-  "record.title.breathing-shallow": "ಉಸಿರಾಟ (ವೇಗವಾಗಿ)",
-  "record.title.breathing-deep": "ಉಸಿರಾಟ (ಆಳವಾಗಿ)",
-  "record.title.cough-shallow": "ಕೆಮ್ಮು (ಮೆಲ್ಲನೆ)",
-  "record.title.cough-heavy": "ಕೆಮ್ಮು (ಜೋರಾಗಿ)",
-  "record.title.vowel-a": "ಸ್ವರ / ಏ /",
-  "record.title.vowel-e": "ಸ್ವರ / ಈ /",
-  "record.title.vowel-o": "ಸ್ವರ / ಊ /",
-  "record.title.counting-normal": "ಎಣಿಕೆ (ಸಾಮಾನ್ಯ ಗತಿ)",
-  "record.title.counting-fast": "ಎಣಿಕೆ (ವೇಗವಾಗಿ)",
-  "record.title.done": "ಮುಕ್ತಾಯ",
-  "record.description.breathing-shallow": "ವೇಗವಾಗಿ 5 ಬಾರಿ ಉಸಿರಾಡಿ",
-  "record.description.breathing-deep": "ಆಳವಾಗಿ 5 ಬಾರಿ ಉಸಿರಾಡಿ ",
-  "record.description.cough-shallow": "ಮೆಲ್ಲಗೆ  3 ಬಾರಿ ಕೆಮ್ಮಿ ",
-  "record.description.cough-heavy": " ಆಳವಾಗಿ 3 ಬಾರಿ ಕೆಮ್ಮಿ ",
-  "record.description.vowel-a": "ಒಂದೇ ಉಸಿರಿನಲ್ಲಿ \"ಏ\" ಎಂದು ಸಾಧ್ಯವಾದಷ್ಟು ಹೊತ್ತು ಹೇಳಿ.",
-  "record.description.vowel-e": "ಒಂದೇ ಉಸಿರಿನಲ್ಲಿ \"ಈ\" ಎಂದು ಸಾಧ್ಯವಾಧಷ್ಟು ಹೊತ್ತು ಹೇಳಿ.",
-  "record.description.vowel-o": "ಒಂದೇ ಉಸಿರಿನಲ್ಲಿ \"ಊ\" ಎಂದು ಸಾಧ್ಯವಾದಷ್ಟು ಹೊತ್ತು ಹೇಳಿ.",
-  "record.description.counting-normal": "ಸಾಮಾನ್ಯ ಗತಿಯಲ್ಲಿ 1 ರಿಂದ 20 ರ ವರೆಗೆ ಎಣಿಸಿ",
-  "record.description.counting-fast": "ವೇಗವಾಗಿ 1 ರಿಂದ 20 ರ ವರೆಗೆ ಎಣಿಸಿ",
-  "record.description.done": "ಭಾಗವಹಿಸಿದ್ದಕ್ಕೆ ನಿಮಗೆ ಧನ್ಯವಾದಗಳು!",
-  "record.message.initializing": "ಪ್ರಾರಂಭಿಸಲಾಗುತ್ತಿದೆ! ದಯಮಾಡಿ ನಿರೀಕ್ಷಿಸಿ...",
-  "record.message.uploading": "ಅಪ್ಲೋಡ್ ಆಗುತ್ತಿದೆ! ದಯಮಾಡಿ ನಿರೀಕ್ಷಿಸಿ...",
-  "record.button.start_recording": "ರೆಕಾರ್ಡಿಂಗ್ ಪ್ರಾರಂಭಿಸಿ",
-  "record.button.stop_recording": "ರೆಕಾರ್ಡಿಂಗ್ ನಿಲ್ಲಿಸಿ",
-  "record.button.play_sample": "ಉದಾಹರಣೆ ಕೇಳಿರಿ",
-  "record.button.stop_playing": "ಕೇಳುವುದನ್ನು ನಿಲ್ಲಿಸಿ ",
-  "record.button.play": "ನಿಮ್ಮ ರೆಕಾರ್ಡಿಂಗ್ ಕೇಳಿರಿ",
-  "record.button.stop": "ಕೇಳುವುದನ್ನು ನಿಲ್ಲಿಸಿ",
-  "record.button.upload": "ಅಪ್ಲೋಡ್ ಮಾಡಿ",
-  "record.button.record_again": "ಮತ್ತೆ ರೆಕಾರ್ಡ್ ಮಾಡಿ",
-  "record.button.cancel": "ರದ್ದುಮಾಡಿ",
-  "thanks.heading": "ಧನ್ಯವಾದಗಳು",
-  "thanks.message.para1": "ಭಾಗವಹಿಸಿದ್ದಕ್ಕೆ ನಿಮಗೆ ಧನ್ಯವಾದಗಳು! ನಿಮ್ಮ ಸ್ನೇಹಿತರು ಮತ್ತು ಸಂಬಂಧಿಕರಿಗೆ ಈ ಅಭಿಯಾನದ ಬಗ್ಗೆ ತಿಳಿಸಿ.",
-  "thanks.message.para2": "ಇತ್ತೀಚಿನ ನವೀಕರಣಗಳನ್ನು ಪಡೆಯಲು <a href='https://www.facebook.com/coswara.iisc'> ಫೇಸ್ಬುಕ್ </a> ಮತ್ತು <a href='https://twitter.com/coswara_iisc'> ಟ್ವಿಟ್ಟರ್</a>ನಲ್ಲಿ ನಮ್ಮನ್ನು ಅನುಸರಿಸಿ.",
-  "thanks.button.start_new_session": "ಹೊಸ ಸೆಷನ್ ಪ್ರಾರಂಭಿಸಿ",
-  "thanks.warning.reuse": "ಸ್ಯಾನಿಟೈಸರ್ ಬಳಸಿ ನಿಮ್ಮ ರೆಕಾರ್ಡಿಂಗ್ ಸಾಧನವನ್ನು ಶುದ್ದೀಕರಿಸಿ. ರೆಕಾರ್ಡಿಂಗ್ ಸಾಧನವನ್ನು ಶುದ್ದೀಕರಿಸದೆ ಬೇರೆಯವರೊಂದಿಗೆ ಹಂಚಿಕೊಳ್ಳಬಾರದು.",
-  "thanks.developed_by": "ನಿರ್ಮಾಣ",
-  "thanks.let_us_know_comments": "ನಿಮ್ಮ ಪ್ರತಿಕ್ರಿಯೆ ತಿಳಿಸಿ!",
-  "thanks.feedback": "ಪ್ರತಿಕ್ರಿಯೆ",
-  "thanks.button.send_feedback": "ಪ್ರತಿಕ್ರಿಯೆ ಕಳುಹಿಸಿ",
-  "thanks.feedback.complete": "ನಿಮ್ಮ ಪ್ರತಿಕ್ರಿಯೆಗೆ ಧನ್ಯವಾದಗಳು!",
-  "note.title": "ಟಿಪ್ಪಣಿ ",
-  "note.para1": "ನೀವು ಫೇಸ್ಬುಕ್ ಅಥವಾ ಟ್ವಿಟರ್ ಅಪ್ಲಿಕೇಶನ್ ಮುಖಾಂತರ ಈ ಪುಟವನ್ನು ವೀಕ್ಷಿಸುತ್ತಿದ್ದರೆ ನಿಮಗೆ ಮೈಕ್ರೊಫೋನ್ ಬಳಕೆಯ ತೊಂದರೆ ಬರಬಹುದು. ದಯವಿಟ್ಟು ಈ ಕೆಳಗಿನ ಯಾವುದಾದರು ಬೆಂಬಲಿತ ಬ್ರೌಸರ್ನಿಂದ url ತೆರೆಯಿರಿ.",
-  "note.supported_browsers": "ಬೆಂಬಲಿತ ಬ್ರೌಸರ್ಗಳು",
-  "browsers.chrome": "ಕ್ರೋಮ್ (Chrome)",
-  "browsers.safari": "ಸಫಾರಿ (Safari)",
-  "browsers.firefox": "ಫೈರ್ಫಾಕ್ಸ್",
-  "device.pc": "ಪಿಸಿ",
-  "device.mac": "ಮ್ಯಾಕ್",
-  "device.android": "ಆಂಡ್ರಾಯ್ಡ್",
-  "device.ios": "ಐಒಎಸ್",
-  "note.button.dismiss": "ವಜಾಗೊಳಿಸಿ",
-  "forms.label.using_mask": "ನೀವು ಮಾಸ್ಕ್ ಧರಿಸಿದ್ದೀರಾ?",
+  "metadata.title.no_metadata": "We need some information to continue!",
+  "metadata.tabs.disclaimer": "ಹಕ್ಕು ನಿರಾಕರಣೆ ",
+  "metadata.tabs.metadata": "ಮೆಟಾಡೇಟಾ ",
+  "metadata.tabs.health_status": "ಆರೋಗ್ಯ ಸ್ಥಿತಿ ",
+  "metadata.disclaimer.para1": "ಮಾನವ ಧ್ವನಿಯಿಂದ ಉಸಿರಾಟದ ಅನಾರೋಗ್ಯವನ್ನು ಗುರುತಿಸಲು ಹೆಚ್ಚಿನ ಮಟ್ಟದ ಸಂವೇದನೆಯನ್ನು ವರದಿ ಮಾಡಿದ ಇತರ ಹಿಂದಿನ ಅಧ್ಯಯನಗಳ ಮೇಲೆ ಈ ಅಧ್ಯಯನವು ನಿರ್ಮಿಸುತ್ತದೆ. ನಂತರದ ದಿನಾಂಕದಂದು ಈ ಅಪ್ಲಿಕೇಶನ್ನ ಭಾಗವಾಗಿ ರೋಗ ಪತ್ತೆ ಹಚ್ಚುವಲ್ಲಿ ಸಂಖ್ಯಾಶಾಸ್ತ್ರೀಯ ಪ್ರಾಮುಖ್ಯತೆಯ ಯಾವುದೇ ಸಾಧನಗಳು ಸಹ ಕಾರ್ಯಗತಗೊಳ್ಳುತ್ತವೆ. ಈ ಅಧ್ಯಯನದಲ್ಲಿ ಪಾಲ್ಗೊಳ್ಳುವಿಕೆಯು ಸಂಪೂರ್ಣವಾಗಿ ಸ್ವಯಂಪ್ರೇರಿತವಾಗಿರುತ್ತದೆ ಮತ್ತು ಸಂಗ್ರಹಿಸಿದ ವಿವರಗಳು ಯಾವುದೇ ವೈಯಕ್ತಿಕವಾಗಿ ಗುರುತಿಸಬಹುದಾದ ಮಾಹಿತಿಯನ್ನು ಹೊಂದಿರುವುದಿಲ್ಲ. ",
+  "metadata.disclaimer.para2": "ಸಂಪೂರ್ಣ ರೆಕಾರ್ಡಿಂಗ್ ಮತ್ತು ಡೇಟಾ ಸಂಗ್ರಹಣೆಯು ಸುಮಾರು 5 ನಿಮಿಷಗಳನ್ನು ತೆಗೆದುಕೊಳ್ಳಬೇಕು. ರೆಕಾರ್ಡಿಂಗ್ ಸಮಯದಲ್ಲಿ ನಿಮ್ಮ ಮುಖದಿಂದ ನಿಮ್ಮ ಸಾಧನವನ್ನು 20 ಸೆಂ.ಮೀ ದೂರದಲ್ಲಿ ಇರಿಸಿ ಮತ್ತು ರೆಕಾರ್ಡಿಂಗ್ ಅನ್ನು ಶಾಂತವಾದ ಪರಿಸರದಲ್ಲಿ ನಿರ್ವಹಿಸಿ. ಸ್ವಚ್ಛಗೊಳಿಸುವ / ನೈರ್ಮಲ್ಯವನ್ನು ಸ್ವಚ್ಛಗೊಳಿಸುವ ಮೊದಲು ರೆಕಾರ್ಡಿಂಗ್ ಸಾಧನವನ್ನು ಇತರರೊಂದಿಗೆ ಹಂಚಿಕೊಳ್ಳಬಾರದು. ",
+  "metadata.disclaimer.para3": "ಭಾರತೀಯ ಇನ್ಸ್ಟಿಟ್ಯೂಟ್ ಆಫ್ ಸೈನ್ಸ್ ಎಥಿಕ್ಸ್ ಸಮಿತಿಯು ಆಕ್ರಮಣಶೀಲವಲ್ಲದ ರೆಕಾರ್ಡಿಂಗ್ಗಳಿಗೆ ಕಾರ್ಯವಿಧಾನವನ್ನು ಅನುಮೋದಿಸಿದೆ. ",
+  "metadata.disclaimer.para4": "ಪ್ರಾರಂಭವನ್ನು ಕ್ಲಿಕ್ ಮಾಡುವುದರ ಮೂಲಕ, ನೀವು ನಮ್ಮ <a href='https://coswara.iisc.Ac.in/terms 'target='_blank''_blank''_blank's </a> ಮತ್ತು ನಿಮ್ಮ ಡೇಟಾಗೆ ಸಮ್ಮತಿಯನ್ನು ನಮಗೆ ಒದಗಿಸಲು ಮಾತ್ರ ಸಂಶೋಧನೆ ಮತ್ತು ಅಭಿವೃದ್ಧಿ ಉದ್ದೇಶಗಳಿಗಾಗಿ. ",
+  "metadata.disclaimer.para4.alternate": "ನೀವು ನಮ್ಮ accep < ",
+  "metadata.disclaimer.para5": "ಯಾವುದೇ ಪ್ರಶ್ನೆಗಳಿಗೆ, ದಯವಿಟ್ಟು <a href='mailto:sriramg@iisis.ac.in's srriramg@iisis.ac.in </a> ",
+  "metadata.buttons.start": "ಪ್ರಾರಂಭಿಸು ",
+  "metadata.buttons.start_over": "ಆರಂಭಿಸು ",
+  "metadata.buttons.continue": "ಮುಂದುವರಿಸು ",
+  "metadata.buttons.previous": "ಹಿಂದಿನ ",
+  "metadata.buttons.next": "ಮುಂದಿನ ",
+  "metadata.buttons.submit": "ಸಲ್ಲಿಸು ",
+  "forms.label.age": "ವಯಸ್ಸು ",
+  "forms.label.gender": "ಲಿಂಗ ",
+  "forms.label.english_proficient": "ನೀವು ಇಂಗ್ಲಿಷ್ನಲ್ಲಿ ಪ್ರವೀಣರಾಗಿದ್ದೀರಾ? ",
+  "forms.label.returning_user": "ನೀವು ಹಿಂದಿರುಗಿದ ಬಳಕೆದಾರರೇ? ",
+  "forms.label.location": "ಸ್ಥಳ ",
+  "forms.label.country": "ದೇಶ ",
+  "forms.label.state": "ರಾಜ್ಯ / ಪ್ರಾಂತ್ಯ ",
+  "forms.label.locality": "ಲೋಕಾಲಿಟಿ / ಜಿಲ್ಲೆ ",
+  "forms.label.current_status": "ಪ್ರಸ್ತುತ ಸ್ಥಿತಿ ",
+  "forms.label.taken_test": "ನೀವು COVID-19 ಪರೀಕ್ಷೆಯನ್ನು ತೆಗೆದುಕೊಂಡಿದ್ದೀರಾ? ",
+  "forms.label.health_conditions": "ಆರೋಗ್ಯ ಪರಿಸ್ಥಿತಿಗಳು ",
+  "forms.label.using_mask": "ನೀವು ಈಗ ಮುಖವಾಡವನ್ನು ಧರಿಸುತ್ತೀರಾ? ",
+  "forms.label.smoking_habits": "ನೀವು ಧೂಮಪಾನ ಪದ್ಧತಿ ಹೊಂದಿದ್ದೀರಾ? ",
+  "forms.label.vacc_status": "ವ್ಯಾಕ್ಸಿನೇಷನ್ ಸ್ಥಿತಿ? ",
+  "forms.label.symptoms": "ಈ ರೋಗಲಕ್ಷಣಗಳನ್ನು ನೀವು ಹೊಂದಿದ್ದೀರಾ? ",
+  "forms.label.conditions": "ನಿಮ್ಮಲ್ಲಿ ಯಾವುದೇ ಪರಿಸ್ಥಿತಿಗಳಿವೆಯೇ? ",
+  "forms.label.resp_ail": "ಈ ಯಾವುದೇ ಉಸಿರಾಟದ ಕಾಯಿಲೆಗಳನ್ನು ಹೊಂದಿದ್ದೀರಾ? ",
+  "forms.label.pre_exist": "ಈ ಮೊದಲೇ ಅಸ್ತಿತ್ವದಲ್ಲಿರುವ ಯಾವುದೇ ಪರಿಸ್ಥಿತಿಗಳನ್ನು ನೀವು ಹೊಂದಿದ್ದೀರಾ? ",
+  "forms.label.test_type": "ನೀವು ಯಾವ ಪರೀಕ್ಷೆಯನ್ನು ತೆಗೆದುಕೊಂಡಿದ್ದೀರಿ? ",
+  "forms.label.when_test": "ನೀವು ಯಾವಾಗ ಪರೀಕ್ಷೆಯನ್ನು ತೆಗೆದುಕೊಂಡಿದ್ದೀರಿ? ",
+  "forms.label.test_date": "ಪರೀಕ್ಷಾ ದಿನಾಂಕ ",
+  "forms.label.srf_id": "ನಿಮ್ಮ SRF-ID ಯನ್ನು ನಮೂದಿಸಿ ",
+  "forms.label.enter_srf_id": "13 ಅಂಕಿಯ SRF-ID ",
+  "forms.label.ct_scan": "ನೀವು CT- ಸ್ಕ್ಯಾನ್ ತೆಗೆದುಕೊಂಡಿದ್ದೀರಾ? ",
+  "forms.label.ct_score": "ನಿಮ್ಮ CT- ಸ್ಕೋರ್ ನಮೂದಿಸಿ ",
+  "forms.label.ct_score_field": "ಸಿಟ್-ಸ್ಕೋರ್ ",
+  "forms.label.ct_scan_date": "ನೀವು CT- ಸ್ಕ್ಯಾನ್ ಅನ್ನು ಯಾವಾಗ ತೆಗೆದುಕೊಂಡಿದ್ದೀರಿ? ",
+  "forms.label.prior_status": "ಹೆಚ್ಚುವರಿ ಮಾಹಿತಿ. ",
+  "forms.errors.required": "ಅಗತ್ಯ ",
+  "forms.errors.age.valid": "ಮಾನ್ಯ ವಯಸ್ಸಿನಂತೆ ಕಾಣುತ್ತಿಲ್ಲ ",
+  "forms.errors.field_required": "ಗುರುತಿಸಲಾದ ಎಲ್ಲಾ ಕ್ಷೇತ್ರಗಳು (*) ಕಡ್ಡಾಯವಾಗಿದೆ ",
+  "forms.errors.ct_score.valid": "ಮಾನ್ಯವಾದ CT ಸ್ಕೋರ್ ಅಲ್ಲ ",
+  "forms.options.male": "ಪುರುಷ ",
+  "forms.options.female": "ಸ್ತ್ರೀ ",
+  "forms.options.other": "ಇತರೆ ",
+  "forms.options.yes": "ಹೌದು ",
+  "forms.options.no": "ಇಲ್ಲ ",
+  "forms.options.both_doses": "2 ಡೋಸಸ್ ",
+  "forms.options.one_dose": "1 ಡೋಸ್ ",
+  "forms.options.no_doses": "ಆಗಿಲ್ಲ ",
+  "forms.option.under_test": "ಪರೀಕ್ಷೆಗಾಗಿ ಮಾದರಿ ನೀಡಲಾಗಿದೆ   , ವರದಿಗಾಗಿ ಕಾಯುತ್ತಿದೆ ",
+  "forms.option.pos_test": "ನನ್ನ ಕೊನೆಯ ಪರೀಕ್ಷೆಯಲ್ಲಿ ಧನಾತ್ಮಕ ಪರೀಕ್ಷೆ ",
+  "forms.option.neg_test": "ನನ್ನ ಕೊನೆಯ ಪರೀಕ್ಷೆಯಲ್ಲಿ ನಕಾರಾತ್ಮಕ ಪರೀಕ್ಷೆ ",
+  "forms.option.no_test": "ಎಂದಿಗೂ ಪರೀಕ್ಷೆಯನ್ನು ತೆಗೆದುಕೊಳ್ಳಲಿಲ್ಲ ",
+  "forms.option.rtpcr": "ಆರ್ಟಿ-ಪಿಸಿಆರ್ ",
+  "forms.option.rat": "ಇಲಿ ",
+  "forms.option.prev_pos": "ಹಿಂದೆ ಧನಾತ್ಮಕ ಪರೀಕ್ಷೆ, ಆದರೆ ಈಗ ಋಣಾತ್ಮಕ ಪರೀಕ್ಷಿಸಿದ್ದಾರೆ ",
+  "forms.option.never_pos": "ಎಂದಿಗೂ ಧನಾತ್ಮಕವಾಗಿ ಪರೀಕ್ಷಿಸಲಿಲ್ಲ ",
+  "forms.option.ut_prev_pos": "ಹಿಂದೆ ಧನಾತ್ಮಕ ಪರೀಕ್ಷೆ ",
+  "forms.option.ut_never_pos": "ಹಿಂದೆ ಎಂದಿಗೂ ಧನಾತ್ಮಕವಾಗಿ ಪರೀಕ್ಷಿಸಲಿಲ್ಲ ",
+  "forms.option.positive_mild": "ಸೌಮ್ಯ ರೋಗಲಕ್ಷಣಗಳು ",
+  "forms.option.positive_moderate": "ಮಧ್ಯಮ ರೋಗಲಕ್ಷಣಗಳು ",
+  "forms.option.positive_asymp": "ಯಾವುದೇ ರೋಗಲಕ್ಷಣಗಳು (ಅಸಂಬದ್ಧ) ",
+  "forms.option.recovered_full": "ಚೇತರಿಸಿಕೊಂಡ ",
+  "forms.option.recovered_neg_test": "ಹಿಂದೆ ಧನಾತ್ಮಕವಾಗಿ ಪರೀಕ್ಷಿಸಿದ್ದರು, ಆದರೆ ಈಗ ನಕಾರಾತ್ಮಕವಾಗಿ ಪರೀಕ್ಷಿಸಿ ಸಂಪೂರ್ಣವಾಗಿ ಚೇತರಿಸಿಕೊಂಡಿದ್ದಾರೆ ",
+  "forms.option.resp_illness_not_identified": "ಇತರ ಪೂರ್ವ ಅಸ್ತಿತ್ವದಲ್ಲಿರುವ ಉಸಿರಾಟದ ಕಾಯಿಲೆಗಳು ",
+  "forms.option.no_resp_illness_exposed": "ಸಂಪರ್ಕದ ಮೂಲಕ ವೈರಸ್ಗೆ ಒಡ್ಡಿಕೊಳ್ಳಬಹುದು ",
+  "forms.option.not_exposed": "ಸಂಪರ್ಕದ ಮೂಲಕ ವೈರಸ್ಗೆ ಬಹಿರಂಗವಾಗಿಲ್ಲ ",
+  "forms.option.healthy": "ಯಾವುದೇ ಉಸಿರಾಟದ ರೋಗಗಳಿಲ್ಲ ",
+  "forms.option.none_of_the_above": "ಮೇಲಿನ ಯಾವುದೂ ಅಲ್ಲ ",
+  "forms.option.cold": "ಶೀತ ",
+  "forms.option.cough": "ಕೆಮ್ಮು ",
+  "forms.option.fever": "ಜ್ವರ ",
+  "forms.option.pneumonia": "ನ್ಯುಮೋನಿಯಾ ",
+  "forms.option.loss_of_smell": "ವಾಸನೆ ಅಥವಾ ಅಭಿರುಚಿಯ ನಷ್ಟ ",
+  "forms.option.smoker": "ಧೂಮಪಾನಿಗಾರ ",
+  "forms.option.asthma": "ಉಬ್ಬಸ ",
+  "forms.option.cld": "ದೀರ್ಘಕಾಲದ ಶ್ವಾಸಕೋಶ ರೋಗ ",
+  "forms.option.ht": "ಅಧಿಕ ರಕ್ತದೊತ್ತಡ ",
   "forms.option.bd": "ಉಸಿರಾಟದ ತೊಂದರೆಗಳು ",
-  "forms.option.st": "ಗಂಟಲು ಕೆರತ",
-  "forms.option.ftg": "ಆಯಾಸ",
-  "forms.option.mp": "ಸ್ನಾಯು ನೋವು",
-  "forms.options.both_doses": "2 ಪ್ರಮಾಣಗಳು",
-  "forms.options.one_dose": "1 ಡೋಸ್",
-  "forms.options.no_doses": "ಮಾಡಿಲ್ಲ",
-  "forms.option.rtpcr": "ಆರ್ಟಿ-ಪಿಸಿಆರ್",
-  "forms.option.rat": "ಇಲಿ",
-  "forms.option.prev_pos": "ಹಿಂದೆ ಧನಾತ್ಮಕವಾಗಿ ಪರೀಕ್ಷಿಸಲಾಗಿದೆ, ಆದರೆ ಈಗ ನಕಾರಾತ್ಮಕತೆಯನ್ನು ಪರೀಕ್ಷಿಸಿದೆ",
-  "forms.option.never_pos": "ಧನಾತ್ಮಕ ಪರೀಕ್ಷೆ ಎಂದಿಗೂ",
-  "forms.option.others_resp": "ಇತರರು",
-  "forms.option.others_preexist": "ಇತರರು"
+  "forms.option.st": "ಗಂಟಲು ಕೆರತ ",
+  "forms.option.ihd": "ರಕ್ತಕೊರತೆಯ ಹೃದಯ ರೋಗ ",
+  "forms.option.mp": "ಸ್ನಾಯು ನೋವು ",
+  "forms.option.ftg": "ಆಯಾಸ ",
+  "forms.option.diabetes": "ಮಧುಮೇಹ ",
+  "forms.option.diarrhoea": "ಅತಿಸಾರ ",
+  "forms.option.others_resp": "ಇತರರು ",
+  "forms.option.others_preexist": "ಇತರರು ",
+  "record.message.info": "ನೀವು ಸ್ತಬ್ಧ ಪರಿಸರದಲ್ಲಿದ್ದೀರಿ ಮತ್ತು ನಿಮ್ಮ ಮುಖವನ್ನು ನಿಮ್ಮ ಮುಖದಿಂದ 20 ಸೆಂ.ಮೀ. ",
+  "record.title.breathing-shallow": "ಉಸಿರಾಟ (ಆಳವಿಲ್ಲದ) ",
+  "record.title.breathing-deep": "ಉಸಿರಾಟ (ಆಳ) ",
+  "record.title.cough-shallow": "ಕೆಮ್ಮು (ಆಳವಿಲ್ಲದ) ",
+  "record.title.cough-heavy": "ಕೆಮ್ಮು (ಭಾರೀ) ",
+  "record.title.vowel-a": "ಸ್ವರ / ಎ / ",
+  "record.title.vowel-e": "ಸ್ವರ / ಇ / ",
+  "record.title.vowel-o": "ಸ್ವರ / ಒ / ",
+  "record.title.counting-normal": "ಎಣಿಕೆಯ (ಸಾಧಾರಣ) ",
+  "record.title.counting-fast": "ಎಣಿಕೆಯ (ವೇಗದ) ",
+  "record.title.done": "ಮುಗಿದ ",
+  "record.description.breathing-shallow": "5 ಬಾರಿ ವೇಗವಾಗಿ ಉಸಿರಾಡು ",
+  "record.description.breathing-deep": "ಆಳವಾಗಿ 5 ಬಾರಿ ಉಸಿರಾಡು ",
+  "record.description.cough-shallow": "ಕೆಮ್ಮು ಸೌಮ್ಯವಾಗಿ 3 ಬಾರಿ ",
+  "record.description.cough-heavy": "ಆಳವಾಗಿ 3 ಬಾರಿ ಕೆಮ್ಮು ",
+  "record.description.vowel-a": "\"ಮಾಡಿದ\" ದಲ್ಲಿ / ಎ / ಎಂದು ಹೇಳಿಕೊಳ್ಳಿ ಮತ್ತು ಸಾಧ್ಯವಾದಷ್ಟು ಕಾಲ ಉಳಿಸಿಕೊಳ್ಳಿ ",
+  "record.description.vowel-e": "\"ಬೀಟ್\" ಎಂದು ಹೇಳಿ ಮತ್ತು ಸಾಧ್ಯವಾದಷ್ಟು ಕಾಲ ಉಳಿಸಿಕೊಳ್ಳಿ ",
+  "record.description.vowel-o": "\"ತಂಪಾದ\" ಎಂದು ಹೇಳುವುದು ಮತ್ತು ಸಾಧ್ಯವಾದಷ್ಟು ಕಾಲ ಉಳಿಸಿಕೊಳ್ಳಿ ",
+  "record.description.counting-normal": "1 ರಿಂದ 20 ರವರೆಗೆ ಎಣಿಸಿ ",
+  "record.description.counting-fast": "1 ರಿಂದ 20 ರವರೆಗೆ ಎಣಿಕೆ ಮಾಡಿ ",
+  "record.description.done": "ನಿಮ್ಮ ಭಾಗವಹಿಸುವಿಕೆಗೆ ಧನ್ಯವಾದಗಳು! ",
+  "record.message.initializing": "ಪ್ರಾರಂಭಿಸುವಿಕೆ! ದಯಮಾಡಿ ನಿರೀಕ್ಷಿಸಿ... ",
+  "record.message.uploading": "ಅಪ್ಲೋಡ್ ಮಾಡಲಾಗುತ್ತಿದೆ! ದಯಮಾಡಿ ನಿರೀಕ್ಷಿಸಿ... ",
+  "record.button.start_recording": "ರೆಕಾರ್ಡಿಂಗ್ ಪ್ರಾರಂಭಿಸಿ ",
+  "record.button.stop_recording": "ರೆಕಾರ್ಡಿಂಗ್ ನಿಲ್ಲಿಸಿ ",
+  "record.button.play_sample": "ಮಾದರಿ ಪ್ಲೇ ಮಾಡಿ ",
+  "record.button.stop_playing": "ಆಟವಾಡುವುದನ್ನು ನಿಲ್ಲಿಸಿ ",
+  "record.button.play": "ಆಟ ",
+  "record.button.stop": "ನಿಲ್ಲಿಸು ",
+  "record.button.upload": "ಅಪ್ಲೋಡ್ ",
+  "record.button.record_again": "ಮತ್ತೆ ರೆಕಾರ್ಡ್ ಮಾಡಿ ",
+  "record.button.cancel": "ರದ್ದುಮಾಡು ",
+  "thanks.heading": "ನಿಮ್ಮ ಭಾಗವಹಿಸುವಿಕೆಗೆ ಧನ್ಯವಾದಗಳು! ",
+  "thanks.message.para1": "ಇದರ ಒಂದು ಭಾಗವಾಗಿರುವುದಕ್ಕೆ ಧನ್ಯವಾದಗಳು! ದಯವಿಟ್ಟು ನಿಮ್ಮ ಸ್ನೇಹಿತರು ಮತ್ತು ಸಂಬಂಧಿಕರಲ್ಲಿ ಇದನ್ನು ಹಂಚಿಕೊಳ್ಳಿ. ",
+  "thanks.message.para2": "ನಮ್ಮನ್ನು ಅನುಸರಿಸಿ. ಇತ್ತೀಚಿನ ನವೀಕರಣಗಳನ್ನು ಪಡೆಯಲು. ದಯವಿಟ್ಟು ಯಾವುದೇ ಸಂವಹನಕ್ಕಾಗಿ ಕೆಳಗಿನ ID ಅನ್ನು ಉಳಿಸಿ. ",
+  "thanks.button.start_new_session": "ಹೊಸ ಅಧಿವೇಶನವನ್ನು ಪ್ರಾರಂಭಿಸಿ ",
+  "thanks.warning.reuse": "ಸ್ವಚ್ಛಗೊಳಿಸುವ / ನೈರ್ಮಲ್ಯವನ್ನು ಸ್ವಚ್ಛಗೊಳಿಸುವ ಮೊದಲು ರೆಕಾರ್ಡಿಂಗ್ ಸಾಧನವನ್ನು ಇತರರೊಂದಿಗೆ ಹಂಚಿಕೊಳ್ಳಬಾರದು. ",
+  "thanks.developed_by": "ಅಭಿವೃದ್ಧಿಪಡಿಸಲಾಗಿದೆ ",
+  "thanks.let_us_know_comments": "ನಿಮ್ಮ ಕಾಮೆಂಟ್ಗಳನ್ನು ನಮಗೆ ತಿಳಿಸಿ! ",
+  "thanks.feedback": "ಪ್ರತಿಕ್ರಿಯೆ ",
+  "thanks.button.send_feedback": "ಪ್ರತಿಕ್ರಿಯೆ ಕಳುಹಿಸಿ ",
+  "thanks.feedback.complete": "ನಿಮ್ಮ ಪ್ರತಿಕ್ರಿಯೆಗಾಗಿ ಧನ್ಯವಾದಗಳು! ",
+  "note.title": "ಸೂಚನೆ ",
+  "note.para1": "ನೀವು ಫೇಸ್ಬುಕ್ ಅಥವಾ ಟ್ವಿಟರ್ ಅಪ್ಲಿಕೇಶನ್ನಿಂದ ಪುಟವನ್ನು ಭೇಟಿ ಮಾಡುತ್ತಿದ್ದರೆ, ಮೈಕ್ರೊಫೋನ್ ಅನ್ನು ಬಳಸುವಲ್ಲಿ ನೀವು ತೊಂದರೆ ಎದುರಿಸಬಹುದು. ಯಾವುದೇ ಬೆಂಬಲಿತ ಬ್ರೌಸರ್ಗಳಲ್ಲಿ ದಯವಿಟ್ಟು URL ಅನ್ನು ತೆರೆಯಿರಿ. ",
+  "note.supported_browsers": "ಬೆಂಬಲಿತ ಬ್ರೌಸರ್ಗಳು ",
+  "browsers.chrome": "ಕ್ರೋಮ್ ",
+  "browsers.safari": "ಸಫಾರಿ ",
+  "browsers.firefox": "ಫೈರ್ಫಾಕ್ಸ್ ",
+  "device.pc": "ಪಿಸಿ ",
+  "device.mac": "ಮ್ಯಾಕ್ ",
+  "device.android": "ಆಂಡ್ರಾಯ್ಡ್ ",
+  "device.ios": "ಐಒಎಸ್ ",
+  "note.button.dismiss": "ವಜಾಗೊಳಿಸು "
 }
